complete the arduinobot_interface

--- a/arduinobot_ws/src/arduinobot_controller/CMakeLists.txt
+++ b/arduinobot_ws/src/arduinobot_controller/CMakeLists.txt
@@ -6,7 +6,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   message_generation
-
+  controller_manager
+  hardware_interface
 )
 
 add_service_files(
@@ -24,10 +25,12 @@ generate_messages(
 catkin_package(
   INCLUDE_DIRS include
   CATKIN_DEPENDS
+    controller_manager
+    hardware_interface
 )
 
 include_directories(
-include
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -35,3 +38,6 @@ add_executable(angles_converter src/angles_converter.cpp)
 add_dependencies(angles_converter ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(angles_converter ${catkin_LIBRARIES})
 
+add_executable(arduinobot_interface_node src/arduinobot_interface.cpp)
+add_dependencies(arduinobot_interface_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(arduinobot_interface_node ${catkin_LIBRARIES})
