--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "bitset": "cpp",
     "memory": "cpp",
     "random": "cpp",
-    "optional": "cpp"
+    "optional": "cpp",
+    "numbers": "cpp"
   },
   "python.autoComplete.extraPaths": [
     "/opt/ros/noetic/lib/python3/dist-packages"
