modify configuration to moveit package

--- a/arduinobot_ws/src/arduinobot_moveit/config/kinematics.yaml
+++ b/arduinobot_ws/src/arduinobot_moveit/config/kinematics.yaml
@@ -5,3 +5,4 @@ arduinobot_arm:
   goal_joint_tolerance: 0.0001
   goal_position_tolerance: 0.0001
   goal_orientation_tolerance: 0.001
+  position_only_ik: True
