--- a/.github/workflows/main-config.yml
+++ b/.github/workflows/main-config.yml
@@ -13,6 +13,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: installing ROS Noetic - moveit
+        run: |
+          curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
+          sudo apt update
+          sudo apt install ros-noetic-desktop-full
+          source /opt/ros/noetic/setup.bash
+          echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
+          source ~/.bashrc
+          sudo apt install python3-rosdep python3-rosinstall python3-rosinstall-generator python3-wstool build-essential
+          sudo apt install python3-rosdep
+          sudo rosdep init
+          rosdep update
+          sudo apt install ros-noetic-moveit
+
       - name: run the project tasks
         run: |
           cd arduinobot_ws
