add workflow dispatch

--- a/.github/workflows/main-config.yml
+++ b/.github/workflows/main-config.yml
@@ -3,9 +3,7 @@ name: Manipulator_Robot
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
-
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-20.04
